Copy-pasted relevant code from previous project.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,6 +22,20 @@
     </script>
   </head>
   <body>
+    <form>
+      <h1>Add User</h1>
+      <div class="in-field">
+        <label for="username">Username: </label>
+        <input type="text" id="username">
+      </div>
+      <div class="in-field">
+        <label for="password">Password: </label>
+        <input type="password" id="password">
+      </div>
+      <div class="in-field">
+        <input type="button" onclick="addUser()" value="Add User">
+      </div>
+    </form>
   </body>
 </html>
 
