--- a/public_html/home.html
+++ b/public_html/home.html
@@ -21,6 +21,28 @@
       crossorigin="anonymous">
     </script>
   </head>
+    <header>
+      <h1>Ostaa</h1>
+    </header>
+    <div id="mainContent">
+      <div id="inputArea">
+        <div id="inField">
+          <input type="text" id="searchBar">
+          <input type="button" onclick="searchListings()" value="Search Listings">
+        </div>  
+        <div id="inField">
+          <input type="button" onclick="viewListings()" value="View your listings">
+        </div>  
+        <div id="inField">
+          <input type="button" onclick="viewPurchases()" value="View your purchases">
+        </div>  
+        <div id="inField">
+          <input type="button" onclick="createListing()" value="Create a listing">
+        </div>  
+      </div>
+      <div id="listingsArea">
+      </div>
+    </div>
   <body>
   </body>
 </html>
