--- a/public_html/post.html
+++ b/public_html/post.html
@@ -22,8 +22,11 @@
     </script>
   </head>
   <body>
+    <h1>Ostaa</h1>
     <form>
-      <h1>Add Item</h1>
+      <div id="inField">
+        <h1>Add a Post</h1>
+      </div>
       <div class="in-field">
         <label for="title">Title: </label>
         <input type="text" id="title">
@@ -49,7 +52,7 @@
         <input type="text" id="seller">
       </div>
       <div class="in-field">
-        <input type="button" onclick="addItem()" value="Add Item">
+        <input type="button" onclick="addItem()" value="Create Post">
       </div>
     </form>
   </body>
