Worked on homepage functionality.

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -21,13 +21,14 @@
       crossorigin="anonymous">
     </script>
   </head>
+  <body>
     <header>
       <h1>Ostaa</h1>
     </header>
     <div id="mainContent">
       <div id="inputArea">
         <div id="inField">
-          <input type="text" id="searchBar">
+          <input type="text" id="search-bar">
           <input type="button" onclick="searchListings()" value="Search Listings">
         </div>  
         <div id="inField">
@@ -43,6 +44,5 @@
       <div id="listingsArea">
       </div>
     </div>
-  <body>
   </body>
 </html>
