--- a/10/public_html/index.html
+++ b/10/public_html/index.html
@@ -24,26 +24,26 @@
   <body>
     <h1>Ostaa</h1>
     <form>
-      <div id="inField">
-      </div>
+      <div class="in-field">
         <h2>Login</h2>
-      <div id="inField">
+      </div>
+      <div class="in-field">
         <label for="acct-name">Username: </label>
         <input type="text" id="acct-name">
       </div>
-      <div id="inField">
+      <div class="in-field">
         <label for="acct-pass">Password: </label>
         <input type="password" id="acct-pass">
       </div>
-      <div id="inField">
+      <div class="in-field">
         <input type="button" onclick="login()" value="Login">
       </div>
-      <div id="inField">
+      <div class="in-field">
         <p id="login-status"></p>
       </div>
     </form>
     <form>
-      <div id="inField">
+      <div class="in-field">
         <h2>Create Account</h2>
       </div>
       <div class="in-field">
@@ -57,7 +57,7 @@
       <div class="in-field">
         <input type="button" onclick="addUser()" value="Create">
       </div>
-      <div id="inField">
+      <div class="in-field">
         <p id="creationMsg"></p>
       </div>
     </form>
