--- a/10/public_html/post.html
+++ b/10/public_html/post.html
@@ -24,8 +24,8 @@
   <body>
     <h1>Ostaa</h1>
     <form>
-      <div id="inField">
-        <h1>Add a Post</h1>
+      <div class="in-field">
+        <h2>Add a Post</h2>
       </div>
       <div class="in-field">
         <label for="title">Title: </label>
